--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,8 @@ jobs:
           images: |
             mbppereira/unoapi-cloud
           tags: |
-            type=branch,pattern=develop
+            type=ref,pattern=main
+            type=ref,pattern=develop
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
