--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,5 @@ CONFIG_SESSION_PHONE_CLIENT=Unoapi
 # Browser Name = Chrome | Firefox | Edge | Opera | Safari
 
 CONFIG_SESSION_PHONE_NAME=Chrome
+INCOMING_DELETES_AS_EDITS=false
+
