--- a/package.json
+++ b/package.json
@@ -78,11 +78,11 @@
     "@aws-sdk/client-s3": "^3.598.0",
     "@aws-sdk/s3-request-presigner": "^3.598.0",
     "@google-cloud/text-to-speech": "^5.2.0",
-    "@redis/client": "^1.5.14",
+    "@redis/client": "^1.5.14", 
     "@sentry/node": "^9.29.0",
     "amqplib": "^0.10.8",
     "awesome-phonenumber": "^6.8.0",
-    "baileys": "^6.7.19-alpha.0",
+    "baileys": "github:WhiskeySockets/Baileys",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "i18n": "^0.15.1",
