--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "NodeNext",
     "moduleResolution": "nodenext",
     "experimentalDecorators": true,
-    "allowJs": false,
+    "allowJs": true,
     "checkJs": false,
     "outDir": "dist",
     "strict": false,
@@ -21,7 +21,7 @@
   "include": ["src/**/*.ts", "src/**/*.json"],
   "ts-node": {
     "compilerOptions": {
-      "esModuleInterop": true,
+      "esModuleInterop": true
     }
   }
 }
