--- a/package.json
+++ b/package.json
@@ -80,10 +80,10 @@
     "@google-cloud/text-to-speech": "^5.2.0",
     "@redis/client": "^1.5.14",
     "@sentry/node": "^9.29.0",
+    "@whiskeysockets/baileys": "gusquadri/Baileys#lid-migration",
     "amqplib": "^0.10.8",
     "audio2textjs": "^1.0.5",
     "awesome-phonenumber": "^6.8.0",
-    "baileys": "^6.7.19",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "i18n": "^0.15.1",
