Revert "temp comment test"
This reverts commit 2962bd64b6b7d65b53207202dc4a9a9a73a8af87.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,10 @@
   "exclude": ["./coverage", "./dist", "__tests__", "jest.config.js"],
   "compilerOptions": {
     "target": "esnext",
-    "module": "NodeNext",
-    "moduleResolution": "nodenext",
+    "module": "esnext",
+    "moduleResolution": "node",
     "experimentalDecorators": true,
-    "allowJs": true,
+    "allowJs": false,
     "checkJs": false,
     "outDir": "dist",
     "strict": false,
@@ -21,7 +21,7 @@
   "include": ["src/**/*.ts", "src/**/*.json"],
   "ts-node": {
     "compilerOptions": {
-      "esModuleInterop": true
+      "esModuleInterop": true,
     }
   }
 }
