--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
+    "@jest/globals": "^30.1.2",
+    "@types/amqplib": "^0.10.7",
     "@types/express": "^4.17.21",
     "@types/i18n": "^0.13.12",
     "@types/jest": "^29.5.12",
@@ -61,14 +63,14 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.7.0",
+    "jest": "^30.1.2",
     "jest-fetch-mock": "^3.0.3",
-    "jest-mock-extended": "^3.0.6",
+    "jest-mock-extended": "^4.0.0",
     "nodemon": "^3.1.0",
     "pino-pretty": "^7.0.0",
     "prettier": "^3.2.5",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.8.0"
@@ -80,8 +82,8 @@
     "@google-cloud/text-to-speech": "^5.2.0",
     "@redis/client": "^1.5.14",
     "@sentry/node": "^9.29.0",
-    "@whiskeysockets/baileys": "gusquadri/Baileys#lid-migration",
-    "amqplib": "^0.10.8",
+    "@whiskeysockets/baileys": "7.0.0-rc.1",
+    "amqplib": "^0.10.9",
     "audio2textjs": "^1.0.5",
     "awesome-phonenumber": "^6.8.0",
     "dotenv": "^16.4.5",
