--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unoapi-cloud",
-  "version": "2.5.2",
+  "version": "3.0.0-alpha.10",
   "description": "Unoapi Cloud",
   "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
